docs(geminidb): credentials are the database account, not IAM (#67)
* docs(geminidb): credentials are the database account, not IAM

The DynamoDB-compatible data plane is served by the GeminiDB instance
itself rather than through the API gateway, so it never consults IAM:
`accessKeyId` must be the database username `rwuser` and
`secretAccessKey` the admin password set when the instance was bought.

The property names are inherited from `AbstractConnectionInterface`,
whose schema says "Huawei Cloud access key" — true for every other
service in this plugin and wrong here. Following it yields a bare
`AccessDeniedException: auth failed` with no error code and no detail,
and it fails that way even when the IAM credential is valid and
`GeminiDB FullAccess` is correctly scoped to the instance's project, so
the error reads like a permissions problem and isn't one.

Verified live on ap-southeast-3 after eliminating signing region (five
regions fail byte-identically), credential mangling, transport and IAM
scope. The same key returned CES `ces.0017 "The invoker have no
sufficient rights"` — a policy denial, which only happens once the
gateway has verified the signature and resolved the principal — proving
the credential itself was good. `rwuser` + admin password then returned
`Cannot do operations on a non-existent table`, i.e. auth succeeded.

Corollary: `securityToken`/`temporaryCredentials` can never work, as
there is no IAM in the path for an STS triple to authenticate against.
`client()` now rejects them with an explanatory error instead of
building `AwsSessionCredentials` that can only fail opaquely. This also
closes the open question of whether the compat layer accepts AWS's
`X-Amz-Security-Token` over Huawei's `X-Security-Token`: not
applicable, the header is never consulted.

dynamodb-local accepts any credential, so no unit test can catch a
regression in the wire behaviour; the replaced test asserts the guard.

Also corrects the documented port: 8000 (fixed at creat